k8s/media-services/flaresolverr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: media-services
  labels:
    app: flaresolverr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: flaresolverr
